@@ -8,6 +8,8 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.util.stream.Collectors;
+
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
@@ -22,7 +24,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         User user = repository.findByEmail(email)
             .orElseThrow(()-> new UsernameNotFoundException("User not Found"));
 
-        var authorities = user.getRoles().stream().map(SimpleGrantedAuthority::new).toList();
+        var authorities = user.getRoles().stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
 
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
